@@ -41,16 +41,13 @@ import xtremweb.database.SQLRequest;
 import xtremweb.security.XWAccessRights;
 
 /**
+ * This class describes a row of the hosts SQL table.
  * HostsInterface.java
  *
  * Created: Feb 19th, 2002
  *
  * @author <a href="mailto:lodygens /at\ .in2p3.fr>Oleg Lodygensky</a>
  * @version %I%, %G%
- */
-
-/**
- * This class describes a row of the hosts SQL table.
  */
 public final class HostInterface extends Table {
 
@@ -88,7 +85,7 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an URI representing the column value
-			 * @throws Exception
+			 * @throws URISyntaxException
 			 *             is thrown on instantiation error
 			 */
 			@Override
@@ -112,7 +109,7 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an URI representing the column value
-			 * @throws Exception
+			 * @throws URISyntaxException
 			 *             is thrown on instantiation error
 			 */
 			@Override
@@ -137,8 +134,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -156,8 +151,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -197,8 +190,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -218,8 +209,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -239,8 +228,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Float representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Float fromString(final String v) {
@@ -260,8 +247,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Float representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Float fromString(final String v) {
@@ -279,8 +264,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an XWOses representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public OSEnum fromString(final String v) {
@@ -312,8 +295,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -333,8 +314,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -352,8 +331,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an XWCPUs representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public CPUEnum fromString(final String v) {
@@ -371,8 +348,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -394,8 +369,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -413,8 +386,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Long representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Long fromString(final String v) {
@@ -435,8 +406,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Long representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -454,8 +423,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Long representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Long fromString(final String v) {
@@ -474,8 +441,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Long representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Long fromString(final String v) {
@@ -494,8 +459,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Long representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Long fromString(final String v) {
@@ -519,8 +482,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Date representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Date fromString(final String v) {
@@ -539,12 +500,10 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Boolean representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Boolean fromString(final String v) {
-				return new Boolean(v);
+				return Boolean.valueOf(v);
 			}
 		},
 		/**
@@ -561,12 +520,10 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Boolean representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Boolean fromString(final String v) {
-				return new Boolean(v);
+				return Boolean.valueOf(v);
 			}
 		},
 		/**
@@ -582,12 +539,10 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Boolean representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Boolean fromString(final String v) {
-				return new Boolean(v);
+				return Boolean.valueOf(v);
 			}
 		},
 		/**
@@ -603,12 +558,10 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Boolean representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Boolean fromString(final String v) {
-				return new Boolean(v);
+				return Boolean.valueOf(v);
 			}
 		},
 		/**
@@ -624,13 +577,10 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Boolean representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public String fromString(final String v) {
-				final String val = v;
-				return val.replaceAll("[\\n\\s\'\"]+", "_");
+				return v.replaceAll("[\\n\\s\'\"]+", "_");
 			}
 		},
 		/**
@@ -644,8 +594,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -664,12 +612,10 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Boolean representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Boolean fromString(final String v) {
-				return new Boolean(v);
+				return Boolean.valueOf(v);
 			}
 		},
 		/**
@@ -683,8 +629,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -702,8 +646,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -722,12 +664,10 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return a Boolean representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Boolean fromString(final String v) {
-				return new Boolean(v);
+				return Boolean.valueOf(v);
 			}
 		},
 		/**
@@ -767,8 +707,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -789,8 +727,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -811,8 +747,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -830,8 +764,6 @@ public final class HostInterface extends Table {
 			 * @param v
 			 *            the String representation
 			 * @return an Integer representing the column value
-			 * @throws Exception
-			 *             is thrown on instantiation error
 			 */
 			@Override
 			public Integer fromString(final String v) {
@@ -841,9 +773,6 @@ public final class HostInterface extends Table {
 		/**
 		 * This is the index based on ordinal so that the first value is
 		 * TableColumns + 1
-		 *
-		 * @see xtremweb.common#TableColumns
-		 * @see Enum#ordinal()
 		 * @since 8.2.0
 		 */
 		private int ord;
@@ -970,7 +899,7 @@ public final class HostInterface extends Table {
 	 *
 	 * @param rs
 	 *            is an SQL request result
-	 * @exception IOException
+	 * @exception IOException is thrown on error
 	 */
 	public HostInterface(final ResultSet rs) throws IOException {
 		this();
@@ -983,7 +912,7 @@ public final class HostInterface extends Table {
 	 * @since 9.0.0
 	 * @param rs
 	 *            is the SQL data set
-	 * @throws IOException
+	 * @exception IOException is thrown on error
 	 */
 	@Override
 	public void fill(final ResultSet rs) throws IOException {
@@ -1204,8 +1133,6 @@ public final class HostInterface extends Table {
 	 * @param attrs
 	 *            contains attributes XML representation
 	 * @see Table#fromXml(Attributes)
-	 * @throws IOException
-	 *             on XML error
 	 */
 	public HostInterface(final Attributes attrs) {
 		this();
@@ -2349,24 +2276,16 @@ public final class HostInterface extends Table {
 
 	/**
 	 * This sets the minimal amount of available RAM this host give to a job, in
-	 * Kb. This must comply to resource owner policy. Provided value must be
-	 * positive and can not exceed XWPropertyDefs.MAXRAMSPACE. If(v >
-	 * XWPropertyDefs.MAXDISKSPACE) v is forced to XWPropertyDefs.MAXDISKSPACE.
-	 * If(v < 0) v is forced to 0.
+	 * Kb.
 	 *
 	 * @param v
 	 *            is the minimal amount of RAM this work needs in Kb.
 	 * @return true if value has changed, false otherwise
-	 * @see XWPropertyDefs#MAXRAMSPACE
 	 * @since 9.1.0
 	 */
 	public final boolean setAvailableMem(final long v) {
 		try {
-			final String sysValueStr = System.getProperty(XWPropertyDefs.MAXRAMSPACE.toString());
-			final String maxValueStr = sysValueStr == null ? XWPropertyDefs.MAXRAMSPACE.defaultValue() : sysValueStr;
-			final long maxValue = Long.parseLong(maxValueStr);
-			final long value = v > maxValue ? maxValue : v;
-			return setValue(Columns.AVAILABLEMEM, Long.valueOf(value < 0 ? 0 : value));
+			return setValue(Columns.AVAILABLEMEM, Long.valueOf(v < 0L ? 0L : v));
 		} catch (final Exception e) {
 			return setValue(Columns.AVAILABLEMEM, Long.valueOf(v));
 		}
